# ai-cost-cutter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  test_benchmark.py
src/ai_cost_cutter/: __init__.py  benchmark.py  cache.py  cli.py  compression.py  dashboard.py  estimator.py  ledger.py  pricing.py  router.py  savings_vs_quality.py  tokens.py
tests/: test_cache.py  test_cli.py  test_compression.py  test_dashboard.py  test_estimator.py  test_ledger.py  test_pricing.py  test_router.py  test_savings_vs_quality.py  test_tokens.py
