[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cost-cutter"
dynamic = ["version"]
description = "Provider-agnostic toolkit to cut LLM spend: model router, prompt compression, response cache, and a cost dashboard."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["llm", "openai", "anthropic", "cost", "tokens", "router", "cache", "compression"]
authors = [{ name = "ai-cost-cutter contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5"]
dev = ["pytest>=7"]

[project.scripts]
aicc = "ai_cost_cutter.cli:main"

[project.urls]
Homepage = "https://github.com/aymandakir-gh/ai-cost-cutter"
Repository = "https://github.com/aymandakir-gh/ai-cost-cutter"
Issues = "https://github.com/aymandakir-gh/ai-cost-cutter/issues"

[tool.hatch.version]
path = "src/ai_cost_cutter/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_cost_cutter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
